css/style.css
/* ... */
/* line 106, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slick-nav.scss */
.slicknav_icon-bar {
  background: #000 !important;
}

/* line 1, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_bg_1 {
  background-image: url(../img/banner/banner.png);
}

/* line 4, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_bg_2 {
  background-image: url(../img/banner/banner2.png);
}

/* line 7, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area {
  padding: 25px 50px;
  background: #fff;
}

@media (max-width: 767px) {
  /* line 7, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area {
    padding: 10px 20px;
  }
}

/* line 14, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner {
  height: 800px;
  position: relative;
  z-index: 8;
  position: relative;
  z-index: 8;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
}

@media (max-width: 767px) {
  /* line 14, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner {
    height: 420px;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  /* line 14, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner {
    height: 500px;
  }
}

@media (min-width: 992px) and (max-width: 1200px) {
  /* line 14, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner {
    height: 700px;
    background-position: right;
  }
}

@media (min-width: 1200px) and (max-width: 1500px) {
  /* line 14, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner {
    height: 800px;
    background-position: right;
  }
}

/* line 37, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner .slider_text {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background: #fff; /*C78665 old*/ 
  padding: 126px 55px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 400px;
  width: 400px;
}

@media (max-width: 767px) {
  /* line 37, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text {
    transform: translate(0%, -50%);
    padding: 35px 25px;
    left: 0;
    padding: 35px 25px;
    left: 0;
    right: 0;
    margin: auto;
    top: 50%;
    transform: translateY(-50%);
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  /* line 37, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text {
    transform: translate(0%, -50%);
    padding: 35px 25px;
    left: 0;
    padding: 35px 25px;
    left: 0;
    right: 0;
    margin: auto;
    top: 50%;
    transform: translateY(-50%);
  }
}

@media (min-width: 992px) and (max-width: 1200px) {
  /* line 37, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text {
    transform: translateX(-50%) translateY(-50%) rotate(0deg);
    padding: 70px 25px;
  }
}

.slider_area_inner .flowers {
  position: absolute;
  height: 90%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(45deg);
}

.flowers-seperator {
  width: 300px;
}

.flowers-seperator.mirrored {
  -moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
}

/* line 90, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner .slider_text .text_inner {
  position: relative;
}

/* line 106, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner .slider_text h4 {
  font-size: 16px;
  font-weight: 600;
  font-family: "Muli", sans-serif;
  color: #e0c9a9;
  margin-top: 5px;
}

/* line 113, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner .slider_text h3 {
  font-size: 24px;
  font-family: "Petit Formal Script", cursive;
  font-weight: 400;
  color: #e0c9a9;
  line-height: 46px;
}

@media (max-width: 767px) {
  /* line 113, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text h3 {
    font-size: 20px;
    font-weight: 400;
    color: #e0c9a9;
    line-height: 30px;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  /* line 113, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text h3 {
    font-size: 18px;
    font-weight: 400;
    color: #e0c9a9;
    line-height: 30px;
  }
}

/* line 138, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner .slider_text span {
  font-size: 18px;
  font-family: "Petit Formal Script", cursive;
  font-weight: 400;
  color: #e0c9a9;
}

@media (max-width: 767px) {
  /* line 113, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text span {
    font-size: 14px;
  }
}

/* line 144, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
.slider_area_inner .slider_text:before {
  position: absolute;
  content: "";
  right: -40px;
  bottom: -25px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  border: 1px solid #e0c9a9;
  top: -30px;
  left: -20px;
  z-index: -3;
}

@media (max-width: 767px) {
  /* line 144, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text:before {
    display: none;
  }
}

@media (min-width: 768px) and (max-width: 991px) {
  /* line 144, ../../Arafath/CL/CL september/212. Wedding/HTML/scss/_slider.scss */
  .slider_area_inner .slider_text:before {
    display: none;
  }
}
/* ... */

